--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ metadata-csv: https://docs.google.com/spreadsheets/d/e/2PACX-1vS2NfIOB689bWBvW_M
 # Uncomment these and enter information for your organization (replacing the CDIL links and name below) if you'd like to brand your site with a logo
 organization-name: "Zhao Zhao Wo"
 # organization-link: https://cdil.lib.uidaho.edu/
-# organization-logo-banner: https://cdil.lib.uidaho.edu/storying-extinction/assets/img/cdil.png
+organization-logo-banner: https://charlottelc.github.io/zhaozhaowo-demo/objects/zhaozhaowologo.jpg
 # organization-logo-nav: https://cdil.lib.uidaho.edu/assets/img/logo.png
 
 ##########
