--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # baseurl is path to location on the domain if necessary e.g. /digital/hjccc
 # on GitHub Pages it is your github repository's name prefixed with a /
 #baseurl: /collectionbuilder-gh 
-location of code, the full url to your github repository
+# location of code, the full url to your github repository
 # source-code: https://github.com/CollectionBuilder/collectionbuilder-sheets
 
 ##########
