--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -12,7 +12,7 @@ featured-image: https://charlottelc.github.io/zhaozhaowo-demo/objects/zhaozhaowo
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 10em # Default is 8em
 # optional: change position of background image, center, top, bottom
-home-banner-image-position: bottom # Default is center
+home-banner-image-position: center # Default is center
 
 ##########
 # ITEM PAGE
